Handle IDE warnings